{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "MobileActions",
            "id": "496d220d-a944-4f81-9cf7-da62538bff0b",
            "actions": [
                {
                    "name": "TouchContact",
                    "type": "Value",
                    "id": "65b3c76a-6dc9-4bda-ba69-7a56b668c2cf",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "110b9a52-1383-4f07-8cca-14d70204a9e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09aa1df9-493e-4cae-9ac5-c9c387aff453",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25931084-d1b2-4e49-9e35-909ced3f706e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}